# luoshu

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  cargo.toml  deny.toml  readme.md  rustfmt.toml
.github/workflow/: build.yml
clients/: test.py
clients/luoshu_python/: Cargo.toml  pyproject.toml  test.py
clients/luoshu_python/src/: lib.rs
clients/luoshu_rust/: Cargo.toml
clients/luoshu_rust/src/: bin.rs  error.rs  lib.rs
clients/luoshu_rust_client/: Cargo.toml  readme.md
clients/luoshu_rust_client/src/: lib.rs
crates/configuration/: Cargo.toml
crates/configuration/src/: lib.rs
crates/connection/: Cargo.toml
crates/connection/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: connection.rs  lib.rs  storage.rs  utils.rs
crates/mem_storage/: Cargo.toml
crates/mem_storage/src/: lib.rs
crates/namespace/: Cargo.toml
crates/namespace/src/: lib.rs
crates/raft/: Cargo.toml
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs  service.rs
crates/sled_storage/: Cargo.toml
crates/sled_storage/src/: configurator_storage.rs  lib.rs  namespace_storage.rs  registry_storage.rs
crates/sled_storage/tests/sled_storage_test/: Cargo.toml
crates/sled_storage/tests/sled_storage_test/src/: main.rs
examples/luoshu_client_test/: Cargo.toml
examples/luoshu_client_test/src/: main.rs
examples/luoshu_test/: Cargo.toml
examples/registry_test/: Cargo.toml
luoshu/: Cargo.toml
luoshu/src/: error.rs  lib.rs  main.rs
luoshu/src/data/: frame.rs  luoshu_data.rs  mem_data.rs  mod.rs  regs.rs  sled_data.rs
luoshu/src/web/: configuration.rs  error.rs  mod.rs  namespace.rs  resp.rs  service.rs
luoshu/src/web/templates/: index.html
luoshu_client/: Cargo.toml
tests/sled_storage_test1/: Cargo.toml
tests/sled_storage_test1/src/: main.rs
