[workspace]
exclude = [
    "examples/*",
]
members = [
    "luoshu",
    "clients/*",
    "crates/*",
    "crates/*/tests/*", # "tests/*",
    "examples/luoshu_client_test",
]

[workspace.package]
authors = ["Hubert Shelley <hubertshelley@163.com>"]
categories = ["web-programming::micro-service", "web-programming::api-gateway", "cloud native"]
description = """
Luoshu
"""
documentation = "https://docs.rs/"
edition = "2021"
homepage = "https://github.com/hubertshelley/luoshu"
keywords = ["discovery", "configuration", "management", "micro-service"]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/hubertshelley/luoshu"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
bytes = "1.2.1"
chrono = "0.4.22"
clap = "4.0.18"
once_cell = "1.16.0"
salvo = "0.37.3"
serde = "1.0.147"
serde_json = "1.0.87"
sled = "0.34.7"
thiserror = "1.0.37"
tokio = "1.21.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = "1.2.1"

pyo3 = "0.17.1"
pyo3-asyncio = "0.17.0"

luoshu_configuration = { version = "0.1.0", path = "./crates/configuration" }
luoshu_connection = { version = "0.1.0", path = "./crates/connection" }
luoshu_core = { version = "0.1.0", path = "./crates/core" }
luoshu_namespace = { version = "0.1.0", path = "./crates/namespace" }
luoshu_registry = { version = "0.1.0", path = "./crates/registry" }
luoshu_sled_storage = { version = "0.1.0", path = "./crates/sled_storage" }
luoshu_mem_storage = { version = "0.1.0", path = "./crates/mem_storage" }
luoshu = { version = "0.1.0", path = "./luoshu" }
