[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "luoshu"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
once_cell.workspace = true
salvo = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sled.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


luoshu_configuration = { workspace = true }
luoshu_core = { workspace = true }
luoshu_connection = { workspace = true }
luoshu_namespace = { workspace = true }
luoshu_registry = { workspace = true }
luoshu_sled_storage = { workspace = true }
