[package]
name = "luoshu_rust_client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = """
Client for Luoshu
"""
readme = "./readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

luoshu = { workspace = true }
