[package]
name = "configuration"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1.0.66"
uuid = { version = "1.2.1", features = ["v4"] }
serde_json = "1.0.87"

core = { path = "../core" }