[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "luoshu_namespace"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
uuid = {workspace = true, features = ["v4"]}

luoshu_core = {workspace = true}
