[package]
name = "sled_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
anyhow = "1.0.66"
serde_json = "1.0.87"

namespace = { path = "../namespace" }
registry = { path = "../registry" }
core = { path = "../core" }