[package]
name = "sled_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"
sled = "0.34.7"
anyhow = "1.0.66"
serde_json = "1.0.87"
tokio = { version = "1.21.2" }

configuration = { path = "../configuration" }
namespace = { path = "../namespace" }
registry = { path = "../registry" }
core = { path = "../core" }

#[dev-dependencies]
#tokio = { version = "1.21.2", features = ["full"] }
