[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "luoshu_sled_storage"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
sled.workspace = true

luoshu_core = { workspace = true }

[dev-dependencies]
luoshu_configuration = { workspace = true }
luoshu_connection = { workspace = true }
luoshu_namespace = { workspace = true }
luoshu_registry = { workspace = true }
