[package]
name = "sled_storage_test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["full"] }

sled_storage = { path = "../../crates/sled_storage" }
configuration = { path = "../../crates/configuration" }
core = { path = "../../crates/core" }